force-app/main/default/objects/Invoice__c/fields/Accounts_Receivable_Account__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Receivable_Account__c</fullName>
    <label>Accounts Receivable Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>