force-app/main/default/objects/Invoice__c/fields/Audit_Log_ID__c.field-meta.xml
<CustomField>
    <fullName>Audit_Log_ID__c</fullName>
    <label>Audit Log ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>