force-app/main/default/objects/Invoice__c/fields/Commission__c.field-meta.xml
<CustomField>
    <fullName>Commission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commission</label>
    <referenceTo>Commission__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>