force-app/main/default/objects/Invoice__c/fields/Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center__c</fullName>
    <label>Cost Center</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>unit cost center</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>