force-app/main/default/objects/Invoice__c/fields/Customer_TRN_VAT_registration__c.field-meta.xml
<CustomField>
    <fullName>Customer_TRN_VAT_registration__c</fullName>
    <label>Customer TRN – VAT registration #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>