force-app/main/default/objects/Invoice__c/fields/ERP_Push_Status__c.field-meta.xml
<CustomField>
    <fullName>ERP_Push_Status__c</fullName>
    <label>ERP Push Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Posted</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>