force-app/main/default/objects/Invoice__c/fields/ERP_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>ERP_Reference_Number__c</fullName>
    <label>ERP Reference #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>