force-app/main/default/objects/Invoice__c/fields/Exception_Register_ID__c.field-meta.xml
<CustomField>
    <fullName>Exception_Register_ID__c</fullName>
    <label>Exception Register ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>