force-app/main/default/objects/Invoice__c/fields/GL_Posting_Date__c.field-meta.xml
<CustomField>
    <fullName>GL_Posting_Date__c</fullName>
    <label>GL Posting Date</label>
    <type>Date</type>
</CustomField>