force-app/main/default/objects/Invoice__c/fields/Invoice_Cancelled_Flag__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Cancelled_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice Cancelled Flag</label>
    <type>Checkbox</type>
</CustomField>