force-app/main/default/objects/Invoice__c/fields/Manual_Invoice_Flag__c.field-meta.xml
<CustomField>
    <fullName>Manual_Invoice_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Invoice Flag</label>
    <type>Checkbox</type>
</CustomField>