force-app/main/default/objects/Invoice__c/fields/Milestone_ID__c.field-meta.xml
<CustomField>
    <fullName>Milestone_ID__c</fullName>
    <label>Milestone ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>