force-app/main/default/objects/Invoice__c/fields/Net_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Net_Invoice_Amount__c</fullName>
    <formula>VAT_Amount__c  +  Gross_Invoice_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>