force-app/main/default/objects/Invoice__c/fields/Payment_Plan_ID__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan_ID__c</fullName>
    <label>Payment Plan ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>