force-app/main/default/objects/Invoice__c/fields/Posting_Status__c.field-meta.xml
<CustomField>
    <fullName>Posting_Status__c</fullName>
    <label>Posting Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Posted</fullName>
            </value>
            <value>
                <fullName>Unposted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>