force-app/main/default/objects/Invoice__c/fields/Revenue_Account__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Account__c</fullName>
    <label>Revenue Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>