force-app/main/default/objects/Invoice__c/fields/Reversal_Invoice_ID__c.field-meta.xml
<CustomField>
    <fullName>Reversal_Invoice_ID__c</fullName>
    <label>Reversal Invoice ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>