force-app/main/default/objects/Invoice__c/fields/Unit_ID__c.field-meta.xml
<CustomField>
    <fullName>Unit_ID__c</fullName>
    <label>Unit ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>