force-app/main/default/objects/Invoice__c/fields/VAT_Applicable__c.field-meta.xml
<CustomField>
    <fullName>VAT_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VAT Applicable</label>
    <type>Checkbox</type>
</CustomField>