force-app/main/default/objects/Invoice__c/fields/VAT_Category__c.field-meta.xml
<CustomField>
    <fullName>VAT_Category__c</fullName>
    <label>VAT Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard Rated</fullName>
            </value>
            <value>
                <fullName>Zero Rated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>