force-app/main/default/objects/Invoice__c/fields/VAT_Locked_Flag__c.field-meta.xml
<CustomField>
    <fullName>VAT_Locked_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VAT Locked Flag</label>
    <type>Checkbox</type>
</CustomField>