force-app/main/default/objects/Invoice__c/fields/VAT_Posting_Account__c.field-meta.xml
<CustomField>
    <fullName>VAT_Posting_Account__c</fullName>
    <label>VAT Posting Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>