force-app/main/default/objects/Invoice__c/fields/Zoho_Invoice_ID__c.field-meta.xml
<CustomField>
    <fullName>Zoho_Invoice_ID__c</fullName>
    <label>Zoho Invoice ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>