force-app/main/default/objects/Invoice__c/fields/Zoho_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Zoho_Sync_Status__c</fullName>
    <label>Zoho Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Synced</fullName>
            </value>
            <value>
                <fullName>Synced</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>